[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/game/board_blue.png" type="Texture" id=1]
[ext_resource path="res://dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ships/3ShipB.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ships/3shipA.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ships/4Ship.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ships/5Ship.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ships/2Ship.tscn" type="PackedScene" id=8]
[ext_resource path="res://script/game/Setup.gd" type="Script" id=10]

[node name="Setup" type="Control"]
anchor_top = 0.00123732
anchor_right = 1.0
anchor_bottom = 0.890237
margin_top = -0.445435
margin_bottom = 39.5145
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board_blue" type="Sprite" parent="."]
position = Vector2( 18, 18 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 199.156
margin_top = 155.6
margin_right = 458.156
margin_bottom = 225.6
rect_min_size = Vector2( 150, 52.5 )
window_title = "Are you sure you'd like to forfeit?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2Ship" parent="." instance=ExtResource( 8 )]
position = Vector2( 490.802, 90.7151 )
collision_layer = 3
contacts_reported = 1
contact_monitor = true

[node name="3ShipA" parent="." instance=ExtResource( 5 )]
position = Vector2( 429.236, 124.21 )
collision_layer = 3
contacts_reported = 1
contact_monitor = true

[node name="3ShipB" parent="." instance=ExtResource( 4 )]
position = Vector2( 427.216, 248.865 )
collision_layer = 3
contacts_reported = 1
contact_monitor = true

[node name="4Ship" parent="." instance=ExtResource( 6 )]
position = Vector2( 491.911, 217.599 )
collision_layer = 3
contacts_reported = 1
contact_monitor = true

[node name="5Ship" parent="." instance=ExtResource( 7 )]
position = Vector2( 557.096, 213.864 )
collision_layer = 3
contacts_reported = 1
contact_monitor = true

[node name="Confirm Placement" type="Button" parent="."]
margin_left = 417.0
margin_top = 316.0
margin_right = 608.0
margin_bottom = 340.0
text = "Confirm Placement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 348.0
margin_top = 316.0
margin_right = 408.0
margin_bottom = 340.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceShipDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -29.0
margin_right = 179.0
margin_bottom = 29.0
dialog_text = "You can't confirm placement until all ships are placed"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="about_to_show" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_about_to_show"]
[connection signal="pressed" from="Confirm Placement" to="." method="_on_Confirm_Placement_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
